--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Paso 3: Instalar las dependencias del proyecto Node.js
       - name: Install Dependencies
-        run: npm ci  # Utilizar 'npm ci' para instalar dependencias de manera rápida y segura
+        run: npm install  # Utilizar 'npm ci' para instalar dependencias de manera rápida y segura
 
       # Paso 4: Construir la aplicación si el comando está presente en el proyecto
       - name: Build Application
