ahora solo corre en versiones de node 16.x

--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -19,7 +19,7 @@ jobs:
     # Configurar una estrategia de matriz para ejecutar el trabajo en múltiples versiones de Node.js
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
     
     #Variables de entorno 
     env:
