--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -62,6 +62,11 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
       
           ssh -o StrictHostKeyChecking=no root@128.199.11.106 "ls"
+
+      - name: Acciones Servidor
+        run: |
+          cd Escritorio/
+          ls
       
       
 
