--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -90,4 +90,6 @@ jobs:
           port: 22
           script: |
             echo "hola cabross"
-            ls 
+            mkdir carpetaSSH
+            ls
+
