--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -81,15 +81,18 @@ jobs:
       #     password: 
       #     script: ls
 
-      - name: multiple command
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: 128.199.11.106
-          username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            echo "hola cabross"
-            mkdir carpetaSSH
-            ls
+      # - name: multiple command
+      #   uses: appleboy/ssh-action@v1.0.0
+      #   with:
+      #     host: 128.199.11.106
+      #     username: root
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     port: 22
+      #     script: |
+      #       echo "hola cabross"
+      #       mkdir carpetaSSH
+      #       ls
+
+      - name: SSH connection
+        run: ssh root@128.199.11.106
 
